--- a/КиноОнлайн/dev/sass/index.sass
+++ b/КиноОнлайн/dev/sass/index.sass
@@ -2,11 +2,14 @@ h1
   font-size: 20px
 h2
   font-size: 14px
-
+*
+  outline: none
 body
-  height: 9000px
-  background: green
+  background: black
 
 @import "global/header"
+@import "index/slider"
 
-
+section
+  height: 9000px
+  background-image: url(http://kino.yaljournal.ru/img/hillynnanor5.jpg)
