--- a/КиноОнлайн/dev/jade/index.jade
+++ b/КиноОнлайн/dev/jade/index.jade
@@ -23,18 +23,28 @@ html(lang='en')
                         .col-xs-12.col-sm-12.col-md-12.col-lg-12
                             h2.title  Популярные фильмы:
 
-                        a(href='#').col-xs-6.col-sm-3.col-md-3.col-lg-3
+                        a(href='#').col-xs-6.col-sm-6.col-md-3.col-lg-3.text-center
+                            .hoverInfoTipR
+                                .arrL
+                                h2 Париж: Город мёртвых
+                                h3 2014, США, ужасы
+                                button Смотреть
+                                    i(aria-hidden="true" class="fa fa-play")
+                                h2 Режисёр: Джон Эрик Даудл
+                                h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
+                                h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
                             img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                            .filmTitle dfsd
-                        a(href='#').col-xs-6.col-sm-3.col-md-3.col-lg-3
+                            .filmTitle Париж: Город мёртвых
+                        a(href='#').col-xs-6.col-sm-6.col-md-3.col-lg-3.text-center
+                            .hoverInfoTipR 2
                             img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                            .filmTitle dfsd
-                        a(href='#').col-xs-6.col-sm-3.col-md-3.col-lg-3
+                            .filmTitle Париж: Город мёртвых
+                        a(href='#').col-xs-6.col-sm-6.col-md-3.col-lg-3.text-center
                             img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                            .filmTitle dfsd
-                        a(href='#').col-xs-6.col-sm-3.col-md-3.col-lg-3
+                            .filmTitle Париж: Город мёртвых
+                        a(href='#').col-xs-6.col-sm-6.col-md-3.col-lg-3.text-center
                             img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                            .filmTitle dfsd
+                            .filmTitle Париж: Город мёртвых
 
 
 
