--- a/КиноОнлайн/dev/sass/index.sass
+++ b/КиноОнлайн/dev/sass/index.sass
@@ -1,11 +1,19 @@
-h1
-  font-size: 20px
-h2
-  font-size: 14px
 *
   outline: none
 body
   background: black
+
+h1
+  font-size: 20px
+h2
+  font-size: 14px
+h3
+  font-size: 12px
+
+a
+  text-decoration: none
+  &:hover
+    text-decoration: none
 
 @import "global/header"
 @import "index/slider"
@@ -13,3 +21,77 @@ body
 section
   height: 9000px
   background-image: url(http://kino.yaljournal.ru/img/hillynnanor5.jpg)
+
+
+a:hover > .hoverInfoTipR
+  opacity: 1
+.hoverInfoTipR
+  bottom: 0
+  top: 0
+  margin: auto
+  text-align: left
+  padding: 10px 20px
+  transition-duration: 0.5s
+  opacity: 0
+  position: absolute
+  left: 95%
+  background-color: rgba(0, 0, 0, 0.80)
+  box-shadow: 0 0 18px #333
+  border-radius: 10px
+  width: 390px
+  height: 225px
+  z-index: 9
+  h2, h3
+    margin-top: 5px
+    margin-bottom: 5px
+    color: white
+    display: block !important
+  .arrL
+    position: absolute
+    left: -25px
+    z-index: 10
+    border: 10px solid transparent
+    border-right: 15px solid rgba(0, 0, 0, 0.80)
+
+
+#popular
+  .container
+    padding: 20px
+    background-color: rgba(0, 0, 0, 0.01)
+    border: solid 1px #666
+    border-radius: 10px
+    box-shadow: 0 0 18px #999
+    font-size: 13px
+    color: #fff
+    h2.title
+      //line-height: 1
+      margin: 0 0 30px 0
+      font-weight: bold
+    a
+      position: relative
+      img
+        max-width: 90%
+        min-width: 90%
+        border: 5px solid white
+        border-radius: 10px
+        box-shadow: 0 0 7px #999
+        transition-duration: 0.5s
+      .filmTitle
+        color: white
+        border-bottom: 1px dashed white
+        width: 50%
+        display: inline-block
+        transition-duration: 0.5s
+        margin-top: 10px
+        text-overflow: ellipsis
+        white-space: nowrap
+        overflow: hidden
+
+#popular a:hover > .filmTitle
+  color: #ff0047 !important
+  border-bottom: 1px dashed #ff0047 !important
+  display: inline-block !important
+
+#popular a:hover > img
+  border: 5px solid #ff0047 !important
+
