--- a/КиноОнлайн/dev/sass/index/slider.sass
+++ b/КиноОнлайн/dev/sass/index/slider.sass
@@ -20,7 +20,6 @@
       position: relative
       .titleBlock
         position: absolute
-        background: red
         margin-left: 10%
         margin-top: 50vh
         color: #999
@@ -28,12 +27,16 @@
         border: solid 1px #666
         border-radius: 10px
         box-shadow: 0 0 18px #999
+        animation-name: titleBlockShow
+        animation-iteration-count: infinite
+        animation-duration: 5s
         h1, h2
           line-height: 0 !important
           padding: 0
           margin: 20px
       .textBlock
         position: absolute
+        z-index: 10
         background: red
         margin-left: 10%
         margin-top: calc(50vh + 70px)
@@ -44,6 +47,9 @@
         box-shadow: 0 0 18px #999
         padding-bottom: 40px
         max-width: 50vw
+        animation-name: textBlockShow
+        animation-iteration-count: infinite
+        animation-duration: 5s
         .text
           line-height: 1 !important
           padding: 0
@@ -52,22 +58,7 @@
           position: absolute
           bottom: 15px
           right: 15px
-          background: #000000
-          background-image: linear-gradient(to bottom, rgba(240,100,137,1) 0%, rgba(240,100,137,1) 46%, rgba(255,0,72,1) 51%, rgba(255,0,72,1) 100%)
-          border-radius: 5px
-          border: 0
-          color: #ffffff
-          font-size: 18px
-          padding: 5px 15px
-          text-decoration: none
-          transition-duration: 0.5s
-          font-weight: bold
-          &:hover
-            background: #000000
-            background-image: linear-gradient(to bottom, rgba(73,73,73,1) 0%, rgba(73,73,73,1) 46%, rgba(0,0,0,1) 51%, rgba(0,0,0,1) 100%)
-            text-decoration: none
-          i
-            margin-left: 10px
+          @include buttonPink(18px, 10px)
 @media (max-width: 970px)
   #slider
     .titleBlock
@@ -83,3 +74,39 @@
       right: 0
       top: 150px !important
       max-width: 100% !important
+
+
+@keyframes titleBlockShow
+  0%
+    margin-left: -50%
+    opacity: 0
+  10%
+    margin-left: -50%
+    opacity: 0
+  30%
+    margin-left: 10%
+    opacity: 1
+  70%
+    margin-left: 10%
+    opacity: 1
+  100%
+    margin-left: -50%
+    opacity: 0
+@keyframes textBlockShow
+  0%
+    margin-left: 50%
+    opacity: 0
+  10%
+    margin-left: 50%
+    opacity: 0
+  30%
+    margin-left: 10%
+    opacity: 1
+  70%
+    margin-left: 10%
+    opacity: 1
+  100%
+    margin-left: 50%
+    opacity: 0
+
+
