--- a/КиноОнлайн/dev/jade/index/recommended.jade
+++ b/КиноОнлайн/dev/jade/index/recommended.jade
@@ -1,26 +1,26 @@
-
-#popular
+#recommended
     .container
         .row
             .col-xs-12.col-sm-12.col-md-12.col-lg-12
-                h2.title  Популярные фильмы:
-            mixin arrR
-                 a(href='#').col-xs-6.col-sm-6.col-md-2.col-lg-2.text-center
-                     .hoverInfoTipR
-                         .arrL
-                         h2 Париж: Город мёртвых
-                         h3 2014, США, ужасы
-                         button Смотреть
-                             i(aria-hidden="true" class="fa fa-play")
-                         h2 Режисёр: Джон Эрик Даудл
-                         h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
-                         h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
-                     img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                     .filmTitle Париж: Город мёртвых
-            +arrR
-            +arrR
+                h2.title  Рекомендуем лично Вам:
+            mixin recommendedElR
+                a(href='#').col-xs-6.col-sm-6.col-md-2.col-lg-2.text-center
+                    .hoverInfoTipR
+                        .arrL
+                        h2 Париж: Город мёртвых
+                        h3 2014, США, ужасы
+                        button Смотреть
+                            i(aria-hidden="true" class="fa fa-play")
+                        h2 Режисёр: Джон Эрик Даудл
+                        h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
+                        h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
-            mixin arrB
+                    img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
+                    .title Глубоководный горизонт
+
+            +recommendedElR
+            +recommendedElR
+            mixin recommendedElB
                 a(href='#').col-xs-6.col-sm-6.col-md-2.col-lg-2.text-center
                     .hoverInfoTipB
                         .arrB
@@ -31,13 +31,13 @@
                         h2 Режисёр: Джон Эрик Даудл
                         h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
                         h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
-                    img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                    .filmTitle Париж: Город мёртвых
 
-            +arrB
-            +arrB
+                    img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
+                    .title Глубоководный горизонт
 
-            mixin arrL
+            +recommendedElB
+            +recommendedElB
+            mixin recommendedElL
                 a(href='#').col-xs-6.col-sm-6.col-md-2.col-lg-2.text-center
                     .hoverInfoTipL
                         .arrL
@@ -48,7 +48,9 @@
                         h2 Режисёр: Джон Эрик Даудл
                         h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
                         h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
-                    img(src='http://kino.yaljournal.ru/image.php?id=cGFyaXpoLWdvcm9kLW1ydHZ5aA==|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                    .filmTitle Париж: Город мёртвых
-            +arrL
-            +arrL
+
+                    img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
+                    .title Глубоководный горизонт
+
+            +recommendedElL
+            +recommendedElL
