--- a/КиноОнлайн/dev/sass/index.sass
+++ b/КиноОнлайн/dev/sass/index.sass
@@ -1,4 +1,18 @@
+//var
+$color-pink: #ff0048
+//var //
 //mixins
+@mixin blockStyle
+  padding: 20px
+  background-color: rgba(0, 0, 0, 0.01)
+  border: solid 1px #666
+  border-radius: 10px
+  box-shadow: 0 0 18px #999
+  font-size: 13px
+  color: #fff
+  h2.title
+    margin: 0 0 30px 0
+    font-weight: bold
 @mixin buttonPink($fontSize, $iMarginLeft)
   background: #000000
   background-image: linear-gradient(to bottom, rgba(240,100,137,1) 0%, rgba(240,100,137,1) 46%, rgba(255,0,72,1) 51%, rgba(255,0,72,1) 100%)
@@ -45,4 +59,10 @@ section
 
 //import
 @import "index/popular"
+@import "index/new"
+@import "index/recommended"
+@import "global/footer"
 //import //
+
+
+
