--- a/КиноОнлайн/dev/sass/index/popular.sass
+++ b/КиноОнлайн/dev/sass/index/popular.sass
@@ -1,16 +1,7 @@
 #popular
+  margin-top: 10vw
   .container
-    padding: 20px
-    background-color: rgba(0, 0, 0, 0.01)
-    border: solid 1px #666
-    border-radius: 10px
-    box-shadow: 0 0 18px #999
-    font-size: 13px
-    color: #fff
-    h2.title
-      //line-height: 1
-      margin: 0 0 30px 0
-      font-weight: bold
+    @include blockStyle
     a
       position: relative
       img
@@ -44,6 +35,7 @@
 a:hover > .hoverInfoTipR
   opacity: 1
 #popular a
+  transition-duration: 0s
   overflow: hidden
   &:hover
     overflow: visible
@@ -53,7 +45,7 @@ a:hover > .hoverInfoTipR
   margin: auto
   text-align: left
   padding: 10px 20px
-  transition-duration: 0.5s
+  transition-duration: 0s
   opacity: 0
   position: absolute
   left: 95%
@@ -160,7 +152,6 @@ a:hover > .hoverInfoTipL
     top: 45%
     z-index: 10
     border: 10px solid transparent
-    //border-bottom: 20px solid rgba(0, 0, 0, 0.80)
     border-left: 20px solid rgba(0, 0, 0, 0.80)
   button
     @include buttonPink(14px, 5px)
