--- a/КиноОнлайн/dev/jade/index.jade
+++ b/КиноОнлайн/dev/jade/index.jade
@@ -18,6 +18,7 @@ html(lang='en')
         section
             include index/popular
             include index/new
+            include index/recommended
             include global/footer
 
         // jQuery (necessary for Bootstrap's JavaScript plugins)
