better structure jade

--- a/КиноОнлайн/dev/jade/index.jade
+++ b/КиноОнлайн/dev/jade/index.jade
@@ -21,12 +21,5 @@ html(lang='en')
             include index/recommended
             include global/footer
 
-        // jQuery (necessary for Bootstrap's JavaScript plugins)
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-        // Include all compiled plugins (below), or include individual files as needed
-        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-        link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css', rel='stylesheet')
-        link(href='css/index.css', rel='stylesheet')
-        script(src='script.js')
-        script(src='http://e-art.com.ru/wp-content/themes/e-art/js/jquery.smoothscroll/jquery.smoothscroll.js?ver=3.3')
-
+         - var pageLink = "css/index.css";
+        include global/scriptAndLink
