--- a/КиноОнлайн/dev/sass/global/sixBlock.sass
+++ b/КиноОнлайн/dev/sass/global/sixBlock.sass
@@ -1,4 +1,4 @@
-#recommended
+#sixBlock
   margin-top: 10vw
   .container
     @include blockStyle
@@ -23,18 +23,18 @@
         .arrB
           border-bottom: 20px solid rgba(0, 0, 0, 0.6) !important
           top: -29.5px !important
-#recommended a
+#sixBlock a
   transition-duration: 0s
   overflow: hidden
   &:hover
     overflow: visible
-#recommended a:hover > img
+#sixBlock a:hover > img
   border: 5px solid $color-pink
-#recommended a:hover > .title
+#sixBlock a:hover > .title
   color: $color-pink
   border-bottom: 1px dashed $color-pink
 @media (max-width: 1200px)
-  #recommended
+  #sixBlock
     .title
       margin-bottom: 10px
     .hoverInfoTipR, .hoverInfoTipL, .hoverInfoTipB
