--- a/КиноОнлайн/dev/sass/index.sass
+++ b/КиноОнлайн/dev/sass/index.sass
@@ -4,9 +4,10 @@
 @import "index/slider"
 section
   background-image: url(http://kino.yaljournal.ru/img/hillynnanor5.jpg)
-@import "index/popular"
 @import "index/new"
-@import "index/recommended"
+//@import "global/sixBlock"
+@import "video/recommendedToYou"
+
 @import "global/footer"
 
 
