--- a/КиноОнлайн/dev/sass/video.sass
+++ b/КиноОнлайн/dev/sass/video.sass
@@ -1,11 +1,124 @@
-@import "global/mixinAndVar"
-@import "global/global"
+//var
+$color-pink: #ff0048
+//var //
+//mixins
+@mixin blockStyle
+  padding: 20px
+  background-color: rgba(0, 0, 0, 0.01)
+  border: solid 1px #666
+  border-radius: 10px
+  box-shadow: 0 0 18px #999
+  font-size: 13px
+  color: #fff
+  h2.title
+    margin: 0 0 30px 0
+    font-weight: bold
+@mixin buttonPink($fontSize, $iMarginLeft)
+  background: #000000
+  background-image: linear-gradient(to bottom, rgba(240,100,137,1) 0%, rgba(240,100,137,1) 46%, rgba(255,0,72,1) 51%, rgba(255,0,72,1) 100%)
+  border-radius: 5px
+  border: 0
+  color: #ffffff
+  font-size: $fontSize
+  padding: 5px 15px
+  text-decoration: none
+  transition-duration: 0.5s
+  font-weight: bold
+  &:hover
+    background: #000000
+    background-image: linear-gradient(to bottom, rgba(73,73,73,1) 0%, rgba(73,73,73,1) 46%, rgba(0,0,0,1) 51%, rgba(0,0,0,1) 100%)
+    text-decoration: none
+  i
+    margin-left: $iMarginLeft
+//mixins //
+
+//global style
+*
+  outline: none
+body
+  background: black
+h1
+  font-size: 20px
+h2
+  font-size: 14px
+h3
+  font-size: 12px
+a
+  text-decoration: none
+  &:hover
+    text-decoration: none
+//global style //
+
+//import
 @import "global/header"
 @import "index/slider"
+//import //
+
 section
   background-image: url(http://kino.yaljournal.ru/img/hillynnanor5.jpg)
+
+//import
 @import "video/like"
 @import "video/last"
 @import "video/recommendedToYou"
 @import "global/footer"
-@import "video/video"
+//import //
+
+
+
+#video
+  background-position: center!important
+  background-size: cover !important
+  .container
+    background-color: rgba(0, 0, 0, 0.50)
+    border: solid 1px #666
+    border-radius: 10px
+    box-shadow: 0 0 18px #999
+    font-size: 13px
+    color: #fff
+    padding: 20px
+  .videoContainer
+    margin: 0
+    height: 0px
+    display: none
+    overflow: hidden
+    transition-duration: 0.5s
+    img
+      //display: none
+      //height: 0px
+      border-radius: 10px
+      width: 100%
+  .darkLayer
+    padding-top: 15vh
+    min-height: 80vh
+    display: block
+    box-shadow: inset 0px 0px 150px 100px rgb(0, 0, 0)
+    .poster
+      img
+        border-radius: 10px
+        width: 100%
+        max-width: 350px
+    .filmInfoRight
+      h1, h2, h3
+        //line-height: 0.9
+        margin: 5px 0
+      .SL
+        height: 20px
+        width: 100%
+        background: red
+      button
+        margin: 10px 0px
+        @include buttonPink(14px, 10px)
+
+.showVideoContainer
+  transition-duration: 0.5s
+  //display: block !important
+  height: auto !important
+@media (max-width: 992px)
+  #video
+    .darkLayer
+      padding-top: 70px
+@media (max-width: 768px)
+  #video
+    *
+      text-align: center
