--- a/КиноОнлайн/dev/jade/global/sixBlock.jade
+++ b/КиноОнлайн/dev/jade/global/sixBlock.jade
@@ -1,8 +1,8 @@
-#recommendedToYou
+#sixBlock
     .container
         .row
             .col-xs-12.col-sm-12.col-md-12.col-lg-12
-                h2.title  Рекомендуем лично Вам:
+                h2.title= sixBlockTitle
             mixin recommendedElR
                 a(href='#').col-xs-6.col-sm-6.col-md-2.col-lg-2.text-center
                     .hoverInfoTipR
@@ -16,7 +16,7 @@
                         h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
                     img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                    .title Глубоководный горизонт
+                    .filmTitle Глубоководный горизонт
 
             +recommendedElR
             +recommendedElR
@@ -33,7 +33,7 @@
                         h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
                     img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                    .title Глубоководный горизонт
+                    .filmTitle Глубоководный горизонт
 
             +recommendedElB
             +recommendedElB
@@ -50,7 +50,10 @@
                         h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
                     img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
-                    .title Глубоководный горизонт
+                    .filmTitle Глубоководный горизонт
 
             +recommendedElL
             +recommendedElL
+
+
+
