--- a/КиноОнлайн/dev/sass/global/global.sass
+++ b/КиноОнлайн/dev/sass/global/global.sass
@@ -14,45 +14,159 @@ a
     text-decoration: none
 
 //sixBlock
+
 #sixBlock
   margin-top: 10vw
   .container
     @include blockStyle
-    img
-      border: 5px solid white
-      border-radius: 10px
-      max-width: 100%
-      transition-duration: 0.5s
     a
-      .title
-        padding-top: 10px
-        color: white
-        display: inline-block
-        border-bottom: 1px dashed white
+      position: relative
+      img
+        z-index: 0
+        max-width: 90%
+        min-width: 90%
+        border: 5px solid white
+        border-radius: 10px
+        box-shadow: 0 0 7px #999
         transition-duration: 0.5s
-      .hoverInfoTipL
-        left: -205% !important
-      .hoverInfoTipR
-        left: 100% !important
-      .hoverInfoTipB
-        margin-left: 10px
-        .arrB
-          border-bottom: 20px solid rgba(0, 0, 0, 0.6) !important
-          top: -29.5px !important
+      .filmTitle
+        z-index: 0
+        color: white
+        border-bottom: 1px dashed white
+        width: 50%
+        display: inline-block
+        transition-duration: 0.5s
+        margin-top: 10px
+        text-overflow: ellipsis
+        white-space: nowrap
+        overflow: hidden
+
+#sixBlock a:hover > .filmTitle
+  color: #ff0047 !important
+  border-bottom: 1px dashed #ff0047 !important
+  display: inline-block !important
+
+#sixBlock a:hover > img
+  border: 5px solid #ff0047 !important
+a:hover > .hoverInfoTipR
+  opacity: 1
 #sixBlock a
   transition-duration: 0s
   overflow: hidden
   &:hover
     overflow: visible
-#sixBlock a:hover > img
-  border: 5px solid $color-pink
-#sixBlock a:hover > .title
-  color: $color-pink
-  border-bottom: 1px dashed $color-pink
+.hoverInfoTipR
+  bottom: 0
+  top: 0
+  margin: auto
+  text-align: left
+  padding: 10px 20px
+  transition-duration: 0s
+  opacity: 0
+  position: absolute
+  left: 95%
+  background-color: rgba(0, 0, 0, 0.80)
+  box-shadow: 0 0 18px #333
+  border-radius: 10px
+  width: 390px
+  height: 230px
+  z-index: 99
+  h2, h3
+    margin-top: 5px
+    margin-bottom: 5px
+    color: white
+    display: block !important
+  .arrL
+    top: 45%
+    position: absolute
+    left: -25px
+    z-index: 10
+    border: 10px solid transparent
+    border-right: 15px solid rgba(0, 0, 0, 0.80)
+  button
+    @include buttonPink(14px, 5px)
 @media (max-width: 1200px)
   #sixBlock
-    .title
-      margin-bottom: 10px
-    .hoverInfoTipR, .hoverInfoTipL, .hoverInfoTipB
+    .hoverInfoTipR
+      display: none
+a:hover > .hoverInfoTipB
+  opacity: 1
+#sixBlock a
+  overflow: hidden
+  &:hover
+    overflow: visible
+.hoverInfoTipB
+  bottom: -100%
+  left: 0
+  margin: auto
+  text-align: left
+  padding: 10px 20px
+  transition-duration: 0.5s
+  opacity: 0
+  position: absolute
+  background-color: rgba(0, 0, 0, 0.80)
+  box-shadow: 0 0 18px #333
+  border-radius: 10px
+  width: 390px
+  height: 230px
+  z-index: 99
+  h2, h3
+    margin-top: 5px
+    margin-bottom: 5px
+    color: white
+    display: block !important
+  .arrB
+    position: absolute
+    left: 80px
+    margin: auto
+    top: -25px
+    z-index: 10
+    border: 10px solid transparent
+    border-bottom: 20px solid rgba(0, 0, 0, 0.80)
+  button
+    @include buttonPink(14px, 5px)
+@media (max-width: 1200px)
+  #sixBlock
+    .hoverInfoTipB
+      display: none
+a:hover > .hoverInfoTipL
+  opacity: 1
+#sixBlock a
+  overflow: hidden
+  &:hover
+    overflow: visible
+.hoverInfoTipL
+  top: 0
+  left: -200%
+  margin: auto
+  text-align: left
+  padding: 10px 20px
+  transition-duration: 0.5s
+  opacity: 0
+  position: absolute
+  background-color: rgba(0, 0, 0, 0.80)
+  box-shadow: 0 0 18px #333
+  border-radius: 10px
+  width: 390px
+  height: 230px
+  z-index: 99
+  h2, h3
+    margin-top: 5px
+    margin-bottom: 5px
+    color: white
+    display: block !important
+  .arrL
+    position: absolute
+    left: 100%
+    margin: auto
+    top: 45%
+    z-index: 10
+    border: 10px solid transparent
+    border-left: 20px solid rgba(0, 0, 0, 0.80)
+  button
+    @include buttonPink(14px, 5px)
+@media (max-width: 1200px)
+  #sixBlock
+    .hoverInfoTipL
       display: none
 //sixBlock //
