--- a/КиноОнлайн/dev/sass/video.sass
+++ b/КиноОнлайн/dev/sass/video.sass
@@ -30,30 +30,9 @@ $color-pink: #ff0048
     text-decoration: none
   i
     margin-left: $iMarginLeft
-//mixins //
-
-//global style
-*
-  outline: none
-body
-  background: black
-h1
-  font-size: 20px
-h2
-  font-size: 14px
-h3
-  font-size: 12px
-a
-  text-decoration: none
-  &:hover
-    text-decoration: none
-//global style //
-
-//import
+//mixins
+@import "global/global"
 @import "global/header"
-@import "index/slider"
-//import //
-
 section
   background-image: url(http://kino.yaljournal.ru/img/hillynnanor5.jpg)
 
