--- a/КиноОнлайн/dev/sass/index.sass
+++ b/КиноОнлайн/dev/sass/index.sass
@@ -31,16 +31,13 @@ $color-pink: #ff0048
   i
     margin-left: $iMarginLeft
 //mixins
+
 @import "global/global"
 @import "global/header"
 @import "index/slider"
-
-
 section
   background-image: url(http://kino.yaljournal.ru/img/hillynnanor5.jpg)
-@import "index/new"
-//@import "global/sixBlock"
-@import "global/footer"
+//@import "global/footer"
 
 
 
