--- a/КиноОнлайн/dev/jade/global/footer.jade
+++ b/КиноОнлайн/dev/jade/global/footer.jade
@@ -1,6 +1,6 @@
 footer
     .container
         .row
-            h2.col-xs-12.col-sm-12.col-md-6.col-lg-6.text-left Кино Онлайн © 2013-2015
-            h2.col-xs-12.col-sm-12.col-md-6.col-lg-6.text-right
+            h2.col-xs-12.col-sm-6.col-md-6.col-lg-6.text-left Кино Онлайн © 2013-2015
+            h2.col-xs-12.col-sm-6.col-md-6.col-lg-6.text-right.hidden-xs
                 .counter
