--- a/КиноОнлайн/dev/jade/video/video.jade
+++ b/КиноОнлайн/dev/jade/video/video.jade
@@ -12,14 +12,28 @@ section#video(style="background: url(http://kino.yaljournal.ru/image.php?id=ZXpo
                         h1.title Джон Уик
                         h3.littleTitle Джон Уик
                         .SL
-                        h2 Название: Джон Уик
-                        h2 Год выпуска: 2014
-                        h2 Страна: Китай, Канада, США
-                        h2 Жанр: боевик
-                        h2 Режисёр: Дэвид Лейтч, Чад Стахелски
-                        h2 В ролях: Киану Ривз, Микаэл Нюквист, Элфи Оуэн-Аллен, Уиллем Дефо, Дин Уинтерс, Эдрианн Палики, Омер Барнеа, Тоби Мур, Дэниэл Бернхард, Бриджет Мойнэхэн
-                        h2 Продолжительность: 101 мин.
+                        h2
+                            span.bold Название:
+                            | Джон Уик
+                        h2
+                            span.bold Год выпуска:
+                            | 2014
+                        h2
+                            span.bold Страна:
+                            | Китай, Канада, США
+                        h2
+                            span.bold Жанр:
+                            | боевик
+                        h2
+                            span.bold Режисёр:
+                            | Дэвид Лейтч, Чад Стахелски
+                        h2
+                            span.bold В ролях:
+                            | Киану Ривз, Микаэл Нюквист, Элфи Оуэн-Аллен, Уиллем Дефо, Дин Уинтерс, Эдрианн Палики, Омер Барнеа, Тоби Мур, Дэниэл Бернхард, Бриджет Мойнэхэн
+                        h2
+                            span.bold Продолжительность:
+                            | 101 мин.
                         button.showHideVideoBlock
                             | Смотреть
                             i(aria-hidden="true" class="fa fa-play")
-                        h2 Джон Уик — бывший наемный убийца — ведет размеренную жизнь, когда преступник крадет его любимый Mustang 1969 года и попутно убивает собаку Дейзи, единственное живое напоминание об умершей жене. Жажда мести пробуждает в нем, казалось, утерянную хватку…
+                        h3 Джон Уик — бывший наемный убийца — ведет размеренную жизнь, когда преступник крадет его любимый Mustang 1969 года и попутно убивает собаку Дейзи, единственное живое напоминание об умершей жене. Жажда мести пробуждает в нем, казалось, утерянную хватку…
