--- a/КиноОнлайн/dev/jade/viewer.jade
+++ b/КиноОнлайн/dev/jade/viewer.jade
@@ -14,19 +14,10 @@ html(lang='en')
           script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     body
         include global/header
-        include video/video
         section
-            - var sixBlockTitle = "Популярные фильмы:";
-            - var sixBlockCounter = 1;
-            include global/sixBlock
-            - var threeBlockCounter = 1;
-            - var threeBlockTopArr = false;
-            - var threeBlockBottomArr = false;
-            - var threeBlockFirst = false;
-            include global/threeBlock
+            include viewer/tag
             - var sixBlockTitle = "Рекомендуем лично Вам:";
             include global/sixBlock
-            - var videoPage = true;
             include global/footer
 
         // jQuery (necessary for Bootstrap's JavaScript plugins)
@@ -34,7 +25,7 @@ html(lang='en')
         // Include all compiled plugins (below), or include individual files as needed
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
         link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css', rel='stylesheet')
-        link(href='css/video.css', rel='stylesheet')
+        link(href='css/viewer.css', rel='stylesheet')
         script(src='script.js')
         script(src='http://e-art.com.ru/wp-content/themes/e-art/js/jquery.smoothscroll/jquery.smoothscroll.js?ver=3.3')
 
