--- a/КиноОнлайн/dev/jade/global/footer.jade
+++ b/КиноОнлайн/dev/jade/global/footer.jade
@@ -2,5 +2,7 @@ footer
     .container
         .row
             h2.col-xs-12.col-sm-6.col-md-6.col-lg-6.text-left Кино Онлайн © 2013-2015
+                if videoPage
+                    a(href='#').tagLinck Теги
             h2.col-xs-12.col-sm-6.col-md-6.col-lg-6.text-right.hidden-xs
                 .counter
