--- a/КиноОнлайн/dev/jade/global/sixBlock.jade
+++ b/КиноОнлайн/dev/jade/global/sixBlock.jade
@@ -11,9 +11,13 @@
                         h3 2014, США, ужасы
                         button Смотреть
                             i(aria-hidden="true" class="fa fa-play")
-                        h2 Режисёр: Джон Эрик Даудл
-                        h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
-                        h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
+                        h2
+                            span.bold Режисёр:
+                            | Джон Эрик Даудл
+                        h2
+                            span.bold В ролях:
+                            | Пердита Викс, Бен Фельдман, Эдвин Ходж
+                        h3 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
                     img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
                     .filmTitle Глубоководный горизонт
@@ -30,7 +34,7 @@
                             i(aria-hidden="true" class="fa fa-play")
                         h2 Режисёр: Джон Эрик Даудл
                         h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
-                        h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
+                        h3 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
                     img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
                     .filmTitle Глубоководный горизонт
@@ -47,7 +51,7 @@
                             i(aria-hidden="true" class="fa fa-play")
                         h2 Режисёр: Джон Эрик Даудл
                         h2 В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж
-                        h2 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
+                        h3 Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых
 
                     img(src='http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234')
                     .filmTitle Глубоководный горизонт
