--- a/КиноОнлайн/dev/sass/global/global.sass
+++ b/КиноОнлайн/dev/sass/global/global.sass
@@ -1,4 +1,4 @@
-$block-margin-top: 15vw
+$block-margin-top: 8vw
 
 *
   outline: none
@@ -9,12 +9,14 @@ h1
 h2
   font-size: 14px
 h3
-  font-size: 12px
+  font-size: 10px
 a
   text-decoration: none
   &:hover
     text-decoration: none
-
+.bold
+  font-weight: bold
+  margin-right: 5px
 //sixBlock
 #sixBlock
   margin-top: $block-margin-top
@@ -69,7 +71,7 @@ a:hover > .hoverInfoTipR
   box-shadow: 0 0 18px #333
   border-radius: 10px
   width: 390px
-  height: 230px
+  height: 200px
   z-index: 99
   h2, h3
     margin-top: 5px
@@ -96,7 +98,7 @@ a:hover > .hoverInfoTipB
   &:hover
     overflow: visible
 .hoverInfoTipB
-  bottom: -100%
+  bottom: -73%
   left: 0
   margin: auto
   text-align: left
@@ -108,7 +110,7 @@ a:hover > .hoverInfoTipB
   box-shadow: 0 0 18px #333
   border-radius: 10px
   width: 390px
-  height: 230px
+  height: 190px
   z-index: 99
   h2, h3
     margin-top: 5px
@@ -148,7 +150,7 @@ a:hover > .hoverInfoTipL
   box-shadow: 0 0 18px #333
   border-radius: 10px
   width: 390px
-  height: 230px
+  height: 200px
   z-index: 99
   h2, h3
     margin-top: 5px
